--- a/squares/index.html
+++ b/squares/index.html
@@ -10,7 +10,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.53/Tone.js"></script>
-        <script src="./soundscapes.js"></script>
+        <script src="./squares.js"></script>
         <link href="./style.css" rel="stylesheet">
     </head>
     <body>
