--- a/squares/index.html
+++ b/squares/index.html
@@ -28,8 +28,8 @@
         <div id="square-7" class="square" onmouseover="playSquare7()" onmouseleave="stopSquare7()"></div>
         <div id="square-8" class="square" onmouseover="playSquare8()" onmouseleave="stopSquare8()"></div>
         <div id="controls">
-            <p>Hover over a square to hear sine waves of various pitches with copious amounts of reverb.</p>
-            <p>Press the shift key to control each square's pitch by moving vertically.</p>
+            <p>Hover over the squares to hear sine waves of various pitches with copious amounts of reverb.</p>
+            <p>Press the shift key to control each square's pitch by moving vertically. Press it again to lock the tuning of all squares into place. Press the space key to return to the original tuning and lock it into place.</p>
             <p>Volume</p>
             <input type="range" min="0" max="200" value="0" id="volumeSlider" oninput="setVolume()">
         </div>
