--- a/synthSandbox/index.html
+++ b/synthSandbox/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="A simple synthesizer">
         <link rel="stylesheet" href="styles.css">
         <script src='https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.53/Tone.js'></script>
-        <script src='./synth_sandbox.js'></script>
+        <script src='./synthSandbox.js'></script>
     </head>
     <body>
         <div id="popup" class="modal" style="display:block">
@@ -16,7 +16,7 @@
         <h1 id="project-name">Synth Sandbox</h1>
         <div class="row">
             <div class="column">
-                <img class="meme" src="./annoying_sound.jpg"> </img> 
+                <img class="meme" src="https://trevorvillwock.github.io/synth_sandbox/annoying_sound.jpg"> </img> 
                 <div class="buttons">
                     <button onclick="start()">start</button>
                 </div>
@@ -49,23 +49,19 @@
                 <h2>Amplitude Modulation Harmonicity</h2>
                 <div>
                     <input type="range" min="0.5" max="5" step=0.1 value="0.5" id="amSlider" class="control-slider" oninput="setAMFreq()">
-                    <input class="number-box" type="number" min="20" max="20000" value="0" id="amNumber" readonly>
+                    <input class="number-box" type="number" min="0.5" max="20000" value="0.5" id="amNumber" readonly>
                 </div>
             </div>
             <div class="column">
-                <h2>Low Frequency Oscillator (LFO)</h2>
+                <h2>Vibrato</h2>
                 <div>
                     <p>Frequency</p>
                     <div>
-                        <input type="range" min="2" max="20" step="0.1" value="0.0" id="lfoFreqSlider" class="control-slider" oninput="setLfoFreq()">
-                        <input class="number-box" type="number" min="20" max="20000" value="0" id="lfoFreqNumber" readonly>
-                        <span>Hz</span>
+                        <input type="range" min="2" max="20" step="0.1" value="0.0" id="vibratoFreqSlider" class="control-slider" oninput="setVibratoFreq()">
                     </div>
                     <p>Range</p>
                     <div>
-                        <input type="range" min="1.0" max="2.0" step="0.01" value="0.0" id="lfoRangeSlider" class="control-slider" oninput="setLfoRange()">
-                        <input class="number-box" type="number" min="20" max="20000" value="0" id="lfoRangeNumber" readonly>
-                        <span>Hz</span>
+                        <input type="range" min="1.0" max="2.0" step="0.01" value="0.0" id="vibratoRangeSlider" class="control-slider" oninput="setVibratoRange()">
                     </div>
                 </div>
                 <h2>Delay (Echo)</h2>
@@ -84,7 +80,7 @@
                     <p>Volume</p>
                     <div>
                         <div class="volume-bar">
-                            <input type="range" min="0.0" max="5.0" value="0.5" step="0.01" id="delayVolumeSlider" class="control-slider" oninput="setDelayVolume()">
+                            <input type="range" min="0.0" max="1.0" value="0.5" step="0.01" id="delayVolumeSlider" class="control-slider" oninput="setDelayVolume()">
                         </div>
                     </div>
                 </div>
