--- a/synthSandbox/index.html
+++ b/synthSandbox/index.html
@@ -17,17 +17,15 @@
         <div class="row">
             <div class="column">
                 <img class="meme" src="https://trevorvillwock.github.io/synth_sandbox/annoying_sound.jpg"> </img> 
-                <div class="buttons">
-                    <button onclick="start()">start</button>
-                </div>
-                <div class="buttons">
+                <div id="buttons">
+                    <button id="startButton" onclick="start()">start</button>
                     <button id="stopButton" onclick="stop()">stop</button>
                 </div>
-                <div >
-                    <input class="check-box" type="checkbox" id="randomSpeedButton" onclick="toggleRandomSpeed()">Random Speed</button>
+                <div class="boxes">
+                    <input class="check-box" type="checkbox" id="randomSpeedButton" onclick="toggleRandomSpeed()">Random Speed</input>
                 </div>
-                <div>
-                    <input type="checkbox" id="randomPitchButton" onclick="toggleRandomPitch()">Random Pitch</button>
+                <div class="boxes">
+                    <input class="check-box" type="checkbox" id="randomPitchButton" onclick="toggleRandomPitch()">Random Pitch</input>
                 </div>
                 <h2>Volume</h2>
                 <div class="volume-bar">
@@ -46,13 +44,12 @@
                     <input class="number-box" type="number" min="20" max="20000" value="1500" id="filterNumber" readonly>
                     <span>Hz</span>
                 </div>
-                <h2>Amplitude Modulation Harmonicity</h2>
-                <div>
-                    <input type="range" min="0.5" max="5" step=0.1 value="0.5" id="amSlider" class="control-slider" oninput="setAMFreq()">
-                    <input class="number-box" type="number" min="0.5" max="20000" value="0.5" id="amNumber" readonly>
-                </div>
             </div>
             <div class="column">
+                <h2>Amplitude Modulation</h2>
+                <div id="amMod">
+                    <input type="range" min="0" max="1" step=0.01 value="0" id="amSlider" class="control-slider" oninput="setAMFreq()">
+                </div>
                 <h2>Vibrato</h2>
                 <div>
                     <p>Frequency</p>
@@ -67,7 +64,7 @@
                 <h2>Delay (Echo)</h2>
                 <div>
                     <p>Time</p>
-                    <div>
+                    <div id="delay">
                         <input type="range" min="0.1" max="1.0" step="0.01" value="0.5" id="delayTimeSlider" class="control-slider" oninput="setDelayTime()">
                         <input class="number-box" type="number" min="20" max="20000" value="0.5" id="delayTimeNumber" readonly>
                         <span>Seconds</span>
@@ -75,6 +72,8 @@
                     <p>Feedback</p>
                     <div>
                         <input type="range" min="0.0" max="0.9" step="0.01" value="0.3" id="delayFeedbackSlider" class="control-slider" oninput="setDelayFeedback()">
+                    </div>
+                    <div>
                         <input class="number-box" type="number" min="0.0" max="0.9" value="0.3" id="delayFeedbackNumber" readonly>
                     </div>
                     <p>Volume</p>
@@ -83,16 +82,6 @@
                             <input type="range" min="0.0" max="1.0" value="0.5" step="0.01" id="delayVolumeSlider" class="control-slider" oninput="setDelayVolume()">
                         </div>
                     </div>
-                </div>
-                <h2>Rhythm</h2>
-                <div>
-                    <label for="notes">Choose a rhythmic value</label>
-                    <select name="notes" id="notes" onchange="setRhythm()">
-                        <option value="4n">Quarter</option>
-                        <option value="8n">Eighth</option>
-                        <option value="8t">Eighth Triplet</option>
-                        <option value="16n">Sixteenth</option>
-                    </select>
                 </div>
             </div>
         </div>
