--- a/synthSandbox/index.html
+++ b/synthSandbox/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Synth Sandbox</title>
@@ -33,7 +33,7 @@
                 </div>
                 <h2>Base Pitch (in Hertz)</h2>
                 <div>
-                    <input class="control-slider" type="range" min="100" max="1000" value="100" id="pitchSlider"
+                    <input class="control-slider" type="range" min="100" max="500" value="100" id="pitchSlider"
                         oninput="setPitch()">
                     <input class="number-box" type="number" min="20" max="20000" value="100" id="pitchNumber" readonly>
                     <span>Hz</span>
