simplifies square sounds play and stop functions

--- a/squareSounds/index.html
+++ b/squareSounds/index.html
@@ -19,14 +19,14 @@
                 <span id="start-box" class="close" onclick="closeModal()">Click to start</span>
             </div>
         </div>
-        <div id="square-1" class="square" onmouseover="playSquare1()" onmouseleave="stopSquare1()"></div>
-        <div id="square-2" class="square" onmouseover="playSquare2()" onmouseleave="stopSquare2()"></div>
-        <div id="square-3" class="square" onmouseover="playSquare3()" onmouseleave="stopSquare3()"></div>
-        <div id="square-4" class="square" onmouseover="playSquare4()" onmouseleave="stopSquare4()"></div>
-        <div id="square-5" class="square" onmouseover="playSquare5()" onmouseleave="stopSquare5()"></div>
-        <div id="square-6" class="square" onmouseover="playSquare6()" onmouseleave="stopSquare6()"></div>
-        <div id="square-7" class="square" onmouseover="playSquare7()" onmouseleave="stopSquare7()"></div>
-        <div id="square-8" class="square" onmouseover="playSquare8()" onmouseleave="stopSquare8()"></div>
+        <div id="square-1" class="square" onmouseover="playSquare(1)" onmouseleave="stopSquare(1)"></div>
+        <div id="square-2" class="square" onmouseover="playSquare(2)" onmouseleave="stopSquare(2)"></div>
+        <div id="square-3" class="square" onmouseover="playSquare(3)" onmouseleave="stopSquare(3)"></div>
+        <div id="square-4" class="square" onmouseover="playSquare(4)" onmouseleave="stopSquare(4)"></div>
+        <div id="square-5" class="square" onmouseover="playSquare(5)" onmouseleave="stopSquare(5)"></div>
+        <div id="square-6" class="square" onmouseover="playSquare(6)" onmouseleave="stopSquare(6)"></div>
+        <div id="square-7" class="square" onmouseover="playSquare(7)" onmouseleave="stopSquare(7)"></div>
+        <div id="square-8" class="square" onmouseover="playSquare(8)" onmouseleave="stopSquare(8)"></div>
         <div id="controls">
             <p>Hover over the squares to hear sine waves of various pitches with copious amounts of reverb.</p>
             <p>Press the shift key to control each square's pitch by moving vertically. Press it again to lock the tuning of all squares into place. 
