--- a/conwaysGameOfSound/index.html
+++ b/conwaysGameOfSound/index.html
@@ -28,7 +28,7 @@
                     Conway's Game of Sound
                 </h>
                 <div id="description">
-                    <p>Conway's Game of Life is a type of cellular automaton invented by the British mathmetician John Conway in 1970. 
+                    <p>Conway's Game of Life is a type of cellular automaton invented by the British mathematician John Conway in 1970. 
                     <p>Cellular automata are mathematical systems defined by a set of cells that interact with the cells around them according to a set of rules. The Game of Life is a 2D automaton, but cellular automata with any number of dimensions are possible.</p>
                     <p>Each cell has its own state defined by a certain number of parameters; in Conway's Game of Life the cells have only one parameter, which is whether they are "alive." </p>
                     <p>The rules according to <a href="http://www.conwaylife.com">conwaylife.com</a> are as follows:</p>
