some refactoring in conway

--- a/conwaysGameOfSound/index.html
+++ b/conwaysGameOfSound/index.html
@@ -19,11 +19,11 @@
                 <span id="start-box" class="close" onclick="closeModal()">Click to start</span>
             </div>
         </div>
-        <div id="row">
-            <div id="column">
+        <div class="row">
+            <div class="column">
                 <div class="container" id="grid"></div>
             </div>
-            <div id="column">
+            <div class="column">
                 <h id="title">
                     Conway's Game of Sound
                 </h>
